crates/margin-tui/tests/snapshots/ui_snapshots__wrapped_cursor_fully_visible_at_bottom.snap
---
source: crates/margin-tui/tests/ui_snapshots.rs
expression: "render(&mut state, 80, 8)"
---
 FILES (1)                ▌        3 +// 宽 字 符 测 试 ： 这 一 行 包 含 全 角 字 符 ， 用 来 验
▌ M src/long.rs      +2 -1            证 按 显 示 宽 度 换 行 的 正 确 性 ， 绝 不 能 把 一 个 字 符
                                      劈 成 两 半




 src/long.rs  6/6  [wrap]
